--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         <text dy="-2">
             <textPath style="font-family: fantasy;" xlink:href="#partialPath" startOffset="12">
                 I LOVEEE YOUUU SOOOOOOO MUCH ANNEESA
-                🌹.......................................................................From CyberSoft !..........................................
+                🌹.......................................................................From ur babyman !..........................................
             </textPath>
         </text>
 
