Update text in index.html for more emphasis

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
         <text dy="-2">
             <textPath style="font-family: fantasy;" xlink:href="#partialPath" startOffset="12">
-                I   LOVEEEEE   YOUUUUUU   SOOOOO   MUCHHH   ANNEESA......From ur babyman !..........................................
+                I   LOVEEEEE   YOUUUUUU   SOOOOOOOOOOOOOOO   MUCHHH   ANNEESA......From ur babyman !..........................................
             </textPath>
         </text>
 
